@@ -132,6 +132,10 @@ x2goclient (4.1.0.1-0x2go1) UNRELEASED; urgency=medium
     - src/sshmasterconnection.cpp: use new PKI-based libssh API for public key
       authentication for libssh 0.6.0 and higher. Fixes: #1119.
     - src/sshmasterconnection.cpp: add YubiKey challenge auth prompt.
+    - src/sshmasterconnection.cpp: fix compile errors on pre-libssh-0.6.0
+      systems and add a TOCTU-race check to see if the file exists prior to
+      calling privatekey_from_file () on such systems. Additionally fix a type
+      issue.
 
   [ Oleksandr Shneyder ]
   * New upstream version (4.1.0.1):
